DCAEGEN2-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is becuase we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: I47585bc0e3baebea06c3062fe77e88eeeac8e756
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/dcaegen2/dcaegen2-analytics-pnda.yaml
+++ b/jjb/dcaegen2/dcaegen2-analytics-pnda.yaml
@@ -15,7 +15,6 @@
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
 
@@ -31,3 +30,13 @@
     mvn-settings: 'dcaegen2-analytics-pnda-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: dcaegen2-analytics-pnda-clm
+    jobs:
+      - gerrit-maven-clm
+    project: dcaegen2/analytics/pnda
+    build-node: ubuntu1604-builder-4c-4g
+    project-name: 'dcaegen2-analytics-pnda'
+    branch: 'master'
+    mvn-settings: 'dcaegen2-analytics-pnda-settings'
