--- a/jjb/dcaegen2/dcaegen2-platform-inventory-api.yaml
+++ b/jjb/dcaegen2/dcaegen2-platform-inventory-api.yaml
@@ -3,7 +3,6 @@
     name: dcaegen2-platform-inventory-api
     project-name: 'dcaegen2-platform-inventory-api'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -39,3 +38,13 @@
     mvn-settings: 'dcaegen2-platform-inventory-api-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: dcaegen2-platform-inventory-api-clm
+    jobs:
+      - gerrit-maven-clm
+    project: dcaegen2/platform/inventory-api
+    build-node: ubuntu1604-docker-8c-8g
+    project-name: 'dcaegen2-platform-inventory-api'
+    branch: 'master'
+    mvn-settings: 'dcaegen2-platform-inventory-api-settings'
