--- a/jjb/dcaegen2/dcaegen2-platform-servicechange-handler.yaml
+++ b/jjb/dcaegen2/dcaegen2-platform-servicechange-handler.yaml
@@ -3,7 +3,6 @@
     name: dcaegen2-platform-servicechange-handler
     project-name: 'dcaegen2-platform-servicechange-handler'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -26,3 +25,13 @@
     files: '**'
     archive-artifacts: ''
     build-node: 'ubuntu1604-docker-8c-8g'
+
+- project:
+    name: dcaegen2-platform-servicechange-handler-clm
+    jobs:
+      - gerrit-maven-clm
+    project: dcaegen2/platform/servicechange-handler
+    build-node: ubuntu1604-docker-8c-8g
+    project-name: 'dcaegen2-platform-servicechange-handler'
+    branch: 'master'
+    mvn-settings: 'dcaegen2-platform-servicechange-handler-settings'
