--- a/jjb/dcaegen2/dcaegen2-services-mapper.yaml
+++ b/jjb/dcaegen2/dcaegen2-services-mapper.yaml
@@ -3,7 +3,6 @@
     name: dcaegen2-services-mapper
     project-name: 'dcaegen2-services-mapper'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -35,3 +34,13 @@
     mvn-settings: 'dcaegen2-services-mapper-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: dcaegen2-services-mapper-clm
+    jobs:
+      - gerrit-maven-clm
+    project: dcaegen2/services/mapper
+    build-node: ubuntu1604-docker-8c-8g
+    project-name: 'dcaegen2-services-mapper'
+    branch: 'master'
+    mvn-settings: 'dcaegen2-services-mapper-settings'
