--- a/jjb/dcaegen2/dcaegen2-utils.yaml
+++ b/jjb/dcaegen2/dcaegen2-utils.yaml
@@ -5,7 +5,6 @@
     python-version: python3
 
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -36,3 +35,13 @@
     mvn-settings: 'dcaegen2-utils-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: dcaegen2-utils-clm
+    jobs:
+      - gerrit-maven-clm
+    project: dcaegen2/utils
+    build-node: ubuntu1604-docker-8c-8g
+    project-name: 'dcaegen2-utils'
+    branch: 'master'
+    mvn-settings: 'dcaegen2-utils-settings'
