--- a/jjb/dcaegen2/apod-analytics.yaml
+++ b/jjb/dcaegen2/apod-analytics.yaml
@@ -18,7 +18,6 @@
     build-node: ubuntu1604-builder-4c-4g
 
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-verify-java':
           mvn-params: '-DskipTests=true'
@@ -36,3 +35,13 @@
     mvn-settings: 'dcaegen2-analytics-tca-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: dcaegen2-analytics-tca-clm
+    jobs:
+      - gerrit-maven-clm
+    project: 'dcaegen2/analytics/tca'
+    project-name: 'dcaegen2-analytics-tca'
+    branch: 'master'
+    build-node: ubuntu1604-builder-4c-4g
+    mvn-settings: 'dcaegen2-analytics-tca-settings'
