--- a/jjb/dcaegen2/dcaegen2-collectors-hv-ves.yaml
+++ b/jjb/dcaegen2/dcaegen2-collectors-hv-ves.yaml
@@ -15,7 +15,6 @@
     archive-artifacts: 'hv-collector-coverage/target/site/jacoco-aggregate,**/target/reports/detekt-report.html'
     build-node: ubuntu1604-docker-8c-8g
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java':
           mvn-goals: 'clean install'
       - '{project-name}-{stream}-merge-java':
@@ -26,3 +25,12 @@
           # No-op
           script: '/bin/true'
 
+- project:
+    name: dcaegen2-collectors-hv-ves-clm
+    jobs:
+      - gerrit-maven-clm
+    project: dcaegen2/collectors/hv-ves
+    project-name: 'dcaegen2-collectors-hv-ves'
+    branch: 'master'
+    build-node: ubuntu1604-docker-8c-8g
+    mvn-settings: 'dcaegen2-collectors-hv-ves-settings'
