--- a/jjb/dcaegen2/dcaegen2-services-prh.yaml
+++ b/jjb/dcaegen2/dcaegen2-services-prh.yaml
@@ -3,7 +3,6 @@
     name: dcaegen2-services-prh
     project-name: 'dcaegen2-services-prh'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -31,3 +30,13 @@
     mvn-settings: 'dcaegen2-services-prh-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: dcaegen2-services-prh-clm
+    jobs:
+      - gerrit-maven-clm
+    project: dcaegen2/services/prh
+    build-node: ubuntu1604-docker-8c-8g
+    project-name: 'dcaegen2-services-prh'
+    branch: 'master'
+    mvn-settings: 'dcaegen2-services-prh-settings'
