--- a/jjb/optf/optf-cmso.yaml
+++ b/jjb/optf/optf-cmso.yaml
@@ -39,7 +39,8 @@
 - project:
     name: optf-cmso-sonar
     jobs:
-      - gerrit-maven-sonar
+      - gerrit-maven-sonar:
+          mvn-params: '-Ddocker.pull.registry=nexus3.onap.org:10001'
     cron: 'H 11 * * *'
     build-node: ubuntu1604-docker-8c-8g
     project: 'optf/cmso'
