DMAAP-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is because we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: I3ab246ad96f7d3627ca2369c6742a97f50486a55
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/dmaap/dmaap-buscontroller.yaml
+++ b/jjb/dmaap/dmaap-buscontroller.yaml
@@ -4,7 +4,6 @@
     name: dmaap-buscontroller
     project-name: 'dmaap-buscontroller'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -29,3 +28,12 @@
 
 # removed sonar job from this template because this repo only builds a docker container
 # and the 0% coverage report from Sonar was causing repeated escalations.
+
+- project:
+    name: dmaap-buscontroller-clm
+    jobs:
+      - gerrit-maven-clm
+    project: dmaap/buscontroller
+    project-name: 'dmaap-buscontroller'
+    branch: 'master'
+    mvn-settings: 'dmaap-buscontroller-settings'
