--- a/jjb/dmaap/dmaap-messagerouter-docker.yaml
+++ b/jjb/dmaap/dmaap-messagerouter-docker.yaml
@@ -4,7 +4,6 @@
     name: dmaap-messagerouter-docker
     project-name: 'dmaap-messagerouter-docker'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-docker-version-java-daily':
           mvn-params: '-Dmaven.test.skip=true'
       - '{project-name}-{stream}-docker-java-daily':
@@ -19,3 +18,13 @@
     docker-pom: 'pom.xml'
     mvn-profile: 'docker'
     build-node: ubuntu1604-docker-8c-8g
+
+- project:
+    name: dmaap-messagerouter-docker-clm
+    jobs:
+      - gerrit-maven-clm
+    project: dmaap/messagerouter/messageservice
+    project-name: 'dmaap-messagerouter-docker'
+    build-node: ubuntu1604-docker-8c-8g
+    branch: 'master'
+    mvn-settings: 'dmaap-messagerouter-messageservice-settings'
