HOLMES-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is because we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: I52ea3a5daf583e1a2c65dec819637ad4657d3a7c
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/holmes/holmes-dsa.yaml
+++ b/jjb/holmes/holmes-dsa.yaml
@@ -3,7 +3,6 @@
     name: holmes-dsa
     project-name: 'holmes-dsa'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -33,3 +32,12 @@
     mvn-settings: 'holmes-dsa-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: holmes-dsa-clm
+    jobs:
+      - gerrit-maven-clm
+    project: holmes/dsa
+    project-name: 'holmes-dsa'
+    branch: 'master'
+    mvn-settings: 'holmes-dsa-settings'
