--- a/jjb/holmes/holmes-common.yaml
+++ b/jjb/holmes/holmes-common.yaml
@@ -3,7 +3,6 @@
     name: holmes-common
     project-name: 'holmes-common'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -29,3 +28,12 @@
     mvn-settings: 'holmes-common-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: holmes-common-clm
+    jobs:
+      - gerrit-maven-clm
+    project: holmes/common
+    project-name: 'holmes-common'
+    branch: 'master'
+    mvn-settings: 'holmes-common-settings'
