--- a/jjb/holmes/holmes-engine-mgt.yaml
+++ b/jjb/holmes/holmes-engine-mgt.yaml
@@ -3,7 +3,6 @@
     name: holmes-engine-management
     project-name: 'holmes-engine-management'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -33,3 +32,12 @@
     mvn-settings: 'holmes-engine-management-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: holmes-engine-management-clm
+    jobs:
+      - gerrit-maven-clm
+    project: holmes/engine-management
+    project-name: 'holmes-engine-management'
+    branch: 'master'
+    mvn-settings: 'holmes-engine-management-settings'
