INT-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is becuase we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: I505cb3a47ac2b71ea43d5ced3a5e938be4253562
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/integration/integration.yaml
+++ b/jjb/integration/integration.yaml
@@ -3,8 +3,6 @@
     name: integration
     project-name: 'integration'
     jobs:
-      - gerrit-maven-clm:
-          mvn-params: '-f version-manifest/pom.xml'
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-version-java-daily'
@@ -20,3 +18,13 @@
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
+
+- project:
+    name: integration-clm
+    jobs:
+      - gerrit-maven-clm:
+          mvn-params: '-f version-manifest/pom.xml'
+    project: integration
+    project-name: 'integration'
+    branch: 'master'
+    mvn-settings: 'integration-settings'
