LOG-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is becuase we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: I94fde04410f36d78077e5126ea223d819654f91f
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/logging-analytics/logging-analytics-pomba-pomba-audit-common.yaml
+++ b/jjb/logging-analytics/logging-analytics-pomba-pomba-audit-common.yaml
@@ -3,7 +3,6 @@
     name: logging-analytics-pomba-pomba-audit-common
     project-name: logging-analytics-pomba-pomba-audit-common
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -35,3 +34,12 @@
       - gerrit-info-yaml-verify
     project: 'logging-analytics/pomba/pomba-audit-common'
     branch: 'master'
+
+- project:
+    name: logging-analytics-pomba-pomba-audit-common-clm
+    jobs:
+      - gerrit-maven-clm
+    project: logging-analytics/pomba/pomba-audit-common
+    project-name: logging-analytics-pomba-pomba-audit-common
+    branch: 'master'
+    mvn-settings: logging-analytics-pomba-pomba-audit-common-settings
