--- a/jjb/logging-analytics/logging-analytics-pomba-pomba-sdc-context-builder.yaml
+++ b/jjb/logging-analytics/logging-analytics-pomba-pomba-sdc-context-builder.yaml
@@ -3,7 +3,6 @@
     name: logging-analytics-pomba-pomba-sdc-context-builder
     project-name: logging-analytics-pomba-pomba-sdc-context-builder
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -41,3 +40,12 @@
       - gerrit-info-yaml-verify
     project: 'logging-analytics/pomba/pomba-sdc-context-builder'
     branch: 'master'
+
+- project:
+    name: logging-analytics-pomba-pomba-sdc-context-builder-clm
+    jobs:
+      - gerrit-maven-clm
+    project: logging-analytics/pomba/pomba-sdc-context-builder
+    project-name: logging-analytics-pomba-pomba-sdc-context-builder
+    branch: 'master'
+    mvn-settings: logging-analytics-pomba-pomba-sdc-context-builder-settings
