MOD-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is because we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: I9ab50b7be18dd8288106e72231c60f1686c3b14a
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/modeling/modeling-toscaparsers-javatoscachecker.yaml
+++ b/jjb/modeling/modeling-toscaparsers-javatoscachecker.yaml
@@ -14,8 +14,6 @@
           pattern: 'javatoscachecker/**'
           pom: 'javatoscachecker/pom.xml'
     jobs:
-      - gerrit-maven-clm:
-          mvn-params: '-f javatoscachecker/pom.xml'
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-version-java-daily'
@@ -42,3 +40,14 @@
     mvn-settings: 'modeling-toscaparsers-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: modeling-toscaparsers-javatoscachecker-clm
+    jobs:
+      - gerrit-maven-clm:
+          mvn-params: '-f javatoscachecker/pom.xml'
+    project: modeling/toscaparsers
+    project-name: 'modeling-toscaparsers-javatoscachecker'
+    build-node: ubuntu1604-docker-8c-8g
+    branch: 'master'
+    mvn-settings: 'modeling-toscaparsers-settings'
