--- a/jjb/modeling/modeling-toscaparsers-nfvparser.yaml
+++ b/jjb/modeling/modeling-toscaparsers-nfvparser.yaml
@@ -15,8 +15,6 @@
           pom: 'nfvparser/pom.xml'
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-python'
-      - gerrit-maven-clm:
-          mvn-params: '-f nfvparser/pom.xml'
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-version-java-daily'
@@ -34,3 +32,13 @@
     mvn-settings: 'modeling-toscaparsers-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: modeling-toscaparsers-nfvparser-clm
+    jobs:
+      - gerrit-maven-clm:
+          mvn-params: '-f nfvparser/pom.xml'
+    project: modeling/toscaparsers
+    project-name: 'modeling-toscaparsers-nfvparser'
+    branch: 'master'
+    mvn-settings: 'modeling-toscaparsers-settings'
