MSB-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is because we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: If67cb19c61776c7e3c0929af6ecba5e44a3563d4
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/msb/msb-apigateway.yaml
+++ b/jjb/msb/msb-apigateway.yaml
@@ -3,7 +3,6 @@
     name: msb-apigateway
     project-name: 'msb-apigateway'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -34,3 +33,12 @@
     mvn-settings: 'msb-apigateway-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: msb-apigateway-clm
+    jobs:
+      - gerrit-maven-clm
+    project: msb/apigateway
+    project-name: 'msb-apigateway'
+    branch: 'master'
+    mvn-settings: 'msb-apigateway-settings'
