MULTICLOUD-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is because we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: I687796265ae87c0698416c8649efdfd491779107
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/multicloud/multicloud-azure-java.yaml
+++ b/jjb/multicloud/multicloud-azure-java.yaml
@@ -12,7 +12,6 @@
           pom: 'azure/pom.xml'
           pattern: 'azure/**'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-{subproject}-verify-java'
@@ -39,3 +38,12 @@
     mvn-settings: 'multicloud-azure-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: multicloud-azure-java-clm
+    jobs:
+      - gerrit-maven-clm
+    project: multicloud/azure
+    project-name: 'multicloud-azure'
+    branch: 'master'
+    mvn-settings: 'multicloud-azure-settings'
