--- a/jjb/multicloud/multicloud-framework-java.yaml
+++ b/jjb/multicloud/multicloud-framework-java.yaml
@@ -12,7 +12,6 @@
           pom: 'multivimbroker/pom.xml'
           pattern: 'multivimbroker/**'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-{subproject}-verify-java'
@@ -39,3 +38,12 @@
     mvn-settings: 'multicloud-framework-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: multicloud-framework-java-clm
+    jobs:
+      - gerrit-maven-clm
+    project: multicloud/framework
+    project-name: 'multicloud-framework'
+    branch: 'master'
+    mvn-settings: 'multicloud-framework-settings'
