--- a/jjb/music/music-prom.yaml
+++ b/jjb/music/music-prom.yaml
@@ -3,7 +3,6 @@
     name: music-prom
     project-name: 'music-prom'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -20,3 +19,12 @@
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
 
+
+- project:
+    name: music-prom-clm
+    jobs:
+      - gerrit-maven-clm
+    project: music/prom
+    project-name: 'music-prom'
+    branch: 'master'
+    mvn-settings: 'music-prom-settings'
