--- a/jjb/music/music.yaml
+++ b/jjb/music/music.yaml
@@ -3,7 +3,6 @@
     name: music
     project-name: 'music'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -35,3 +34,12 @@
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
 
+
+- project:
+    name: music-clm
+    jobs:
+      - gerrit-maven-clm
+    project: music
+    project-name: 'music'
+    branch: 'master'
+    mvn-settings: 'music-settings'
