MUSIC-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is becuase we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: I7c6c2e167f86c4d66d45adddbbed256e3c798d83
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/music/music-jar.yaml
+++ b/jjb/music/music-jar.yaml
@@ -7,8 +7,6 @@
           pom: 'jar/pom.xml'
           pattern: 'jar/**'
     jobs:
-      - gerrit-maven-clm:
-          mvn-params: '-f jar/pom.xml'
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
     project: 'music'
@@ -24,3 +22,13 @@
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
 
+
+- project:
+    name: music-jar-clm
+    jobs:
+      - gerrit-maven-clm:
+          mvn-params: '-f jar/pom.xml'
+    project: music
+    project-name: 'music'
+    branch: 'master'
+    mvn-settings: 'music-settings'
