--- a/jjb/oom/oom-registrator.yaml
+++ b/jjb/oom/oom-registrator.yaml
@@ -3,7 +3,6 @@
     name: oom-registrator
     project-name: 'oom-registrator'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -20,3 +19,12 @@
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
+
+- project:
+    name: oom-registrator-clm
+    jobs:
+      - gerrit-maven-clm
+    project: oom/registrator
+    project-name: 'oom-registrator'
+    branch: 'master'
+    mvn-settings: 'oom-registrator-settings'
