--- a/jjb/oparent/oparent.yaml
+++ b/jjb/oparent/oparent.yaml
@@ -3,7 +3,6 @@
     name: oparent
     project-name: 'oparent'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -15,3 +14,12 @@
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
+
+- project:
+    name: oparent-clm
+    jobs:
+      - gerrit-maven-clm
+    project: oparent
+    project-name: 'oparent'
+    branch: 'master'
+    mvn-settings: 'oparent-settings'
