OPTF-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is because we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: If4e6bc2643f8ef1f0c57b8ff737261b7e65e7fe0
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/optf/optf-cmso.yaml
+++ b/jjb/optf/optf-cmso.yaml
@@ -4,8 +4,6 @@
     name: optf-cmso
     project-name: 'optf-cmso'
     jobs:
-      - gerrit-maven-clm:
-         mvn-params: '-Ddocker.pull.registry=nexus3.onap.org:10001'
       - '{project-name}-{stream}-verify-java-checkstyle':
          mvn-params: '-Ddocker.pull.registry=nexus3.onap.org:10001'
       - '{project-name}-{stream}-merge-properties-java':
@@ -48,3 +46,14 @@
     mvn-settings: 'optf-cmso-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: optf-cmso-clm
+    jobs:
+      - gerrit-maven-clm:
+         mvn-params: '-Ddocker.pull.registry=nexus3.onap.org:10001'
+    project: optf/cmso
+    project-name: 'optf-cmso'
+    build-node: ubuntu1604-docker-8c-8g
+    branch: 'master'
+    mvn-settings: 'optf-cmso-settings'
