POLICY-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is becuase we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: I7f4c631fb4b91cfd050f2cf8926e169e75812bd6
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/policy/policy-common.yaml
+++ b/jjb/policy/policy-common.yaml
@@ -3,7 +3,6 @@
     name: policy-common
     project-name: 'policy-common'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily':
@@ -30,3 +29,12 @@
     mvn-settings: 'policy-common-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: policy-common-clm
+    jobs:
+      - gerrit-maven-clm
+    project: policy/common
+    project-name: 'policy-common'
+    branch: 'master'
+    mvn-settings: 'policy-common-settings'
