--- a/jjb/policy/policy-xacml-pdp.yaml
+++ b/jjb/policy/policy-xacml-pdp.yaml
@@ -3,7 +3,6 @@
     name: policy-xacml-pdp
     project-name: 'policy-xacml-pdp'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
 
@@ -28,3 +27,12 @@
     mvn-settings: 'policy-xacml-pdp-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: policy-xacml-pdp-clm
+    jobs:
+      - gerrit-maven-clm
+    project: policy/xacml-pdp
+    project-name: 'policy-xacml-pdp'
+    branch: 'master'
+    mvn-settings: 'policy-xacml-pdp-settings'
