--- a/jjb/policy/policy-apex-pdp.yaml
+++ b/jjb/policy/policy-apex-pdp.yaml
@@ -3,7 +3,6 @@
     name: policy-apex-pdp
     project-name: 'policy-apex-pdp'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-scm-mvn-script':
           mvn-goals: 'clean deploy -B
@@ -39,3 +38,12 @@
     mvn-settings: 'policy-apex-pdp-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: policy-apex-pdp-clm
+    jobs:
+      - gerrit-maven-clm
+    project: policy/apex-pdp
+    project-name: 'policy-apex-pdp'
+    branch: 'master'
+    mvn-settings: 'policy-apex-pdp-settings'
