--- a/jjb/policy/policy-parent.yaml
+++ b/jjb/policy/policy-parent.yaml
@@ -3,7 +3,6 @@
     name: policy-parent
     project-name: 'policy-parent'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -16,3 +15,12 @@
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
+
+- project:
+    name: policy-parent-clm
+    jobs:
+      - gerrit-maven-clm
+    project: policy/parent
+    project-name: 'policy-parent'
+    branch: 'master'
+    mvn-settings: 'policy-parent-settings'
