PORTAL-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is becuase we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: I0dbbae1870cd71e6a72d5064f540189d5a4d78aa
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/portal/portal.yaml
+++ b/jjb/portal/portal.yaml
@@ -3,7 +3,6 @@
     name: portal
     project-name: 'portal'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-release-java-daily'
     project: 'portal'
     stream:
@@ -29,3 +28,12 @@
     mvn-settings: 'portal-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: portal-clm
+    jobs:
+      - gerrit-maven-clm
+    project: portal
+    project-name: 'portal'
+    branch: 'master'
+    mvn-settings: 'portal-settings'
