PORTAL-SDK-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is because we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: Ib22c4e5bfc5f8b74cf37c339ead26baf52518eaf
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/portal-sdk/portal-sdk.yaml
+++ b/jjb/portal-sdk/portal-sdk.yaml
@@ -9,8 +9,6 @@
     subproject-name: 'onap-sdk'
 
     jobs:
-      - gerrit-maven-clm:
-          mvn-params: '-f ecomp-sdk/pom.xml'
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-java-daily'
@@ -38,3 +36,13 @@
     mvn-settings: 'portal-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: portal-sdk-clm
+    jobs:
+      - gerrit-maven-clm:
+          mvn-params: '-f ecomp-sdk/pom.xml'
+    project: portal/sdk
+    project-name: 'portal-sdk'
+    branch: 'master'
+    mvn-settings: 'portal-sdk-settings'
